feat: Add metadata handling for groups (#289)
* feat: Add metadata handling for groups and users, including validation and query support


* Apply suggestions from code review


---------
